updates on pages, built ready

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -17,7 +17,7 @@ It has been designed with the following structure:
 - Thread engine: used as a thread manager that runs based on the requirements of the user, including data and functions to run.
 - Scheduler: graph-based scheduling through dependency acyclic behavior.
 
-The code has been developed considering an open-source, open-ended ontology in which the user can modify the framework based on the end-use case required. This means that the user is able to port different type of coding structures into the engine following the [guidelines] described in the repository and throughout this tutorial.
+The code has been developed considering an open-source, open-ended ontology in which the user can modify the framework based on the end-use case required. This means that the user is able to port different type of coding structures into the engine following the [guidelines](https://github.com/uihilab/HydroCompute/tree/master/src/javascript) described in the repository and throughout this tutorial.
 
 It is a purely computational library developed to run computationally expensive code on the client-side without any dependencies.
 
